--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -136,6 +136,7 @@
             <img src="{{ url_for('static', filename='games_images/default_image.jpg') }}" alt="Default Game Picture" class="images-size">
             {% endif %}
         </div>
+        <hr class="red-h-line">
     </li>
 </ul>
 
