--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -42,5 +42,9 @@
         <div class="login-admin">
             <a href="/login">Login</a>
         </div>
-    {% endif %}
+    {% endif %}  
+
+    <div class="sticker">
+        <img src="/static/games_images/sticker.jpg">
+    </div>
 </nav>
